--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatable" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anzum Rahman</title>
+    <title>Activity Submissions - Anzum Rahman</title>
 </head>
 <body>
-    <p>Hi! This is my first HTML element</p>
+ <h1>Anzum Rahman</h1>   
+ <h2>Class Activiy</h2>
+ <ul>
+    <li><a href="nycattractions/nyc.html" target="blank"> Activity 2</a></li>
+ </ul>
 </body>
 </html>
