--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
  <h2>Class Activiy</h2>
  <ul>
     <li><a href="nycattractions/nyc.html" target="blank"> Activity 2</a></li>
+    <li><a href="activity3/activity3.html" target="blank"> Activity 3</a></li>
  </ul>
 </body>
 </html>
