--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
  <ul>
     <li><a href="nycattractions/nyc.html" target="blank"> Activity 2</a></li>
     <li><a href="activity3/activity3.html" target="blank"> Activity 3</a></li>
+    <li><a href="activity4/activity4.html" target="blank"> Activity 4</a></li>
+
  </ul>
 </body>
 </html>
