--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <li><a href="nycattractions/nyc.html" target="blank"> Activity 2</a></li>
     <li><a href="activity3/activity3.html" target="blank"> Activity 3</a></li>
     <li><a href="activity4/activity4.html" target="blank"> Activity 4</a></li>
+    <li><a href="day8/day8.html" target="_blank"> Activity 5</a></li>
 
  </ul>
 </body>
