--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <li><a href="activity4/activity4.html" target="blank"> Activity 4</a></li>
     <li><a href="day8/day8.html" target="_blank"> Activity 5</a></li>
     <li><a href="day9/day9.html" target="_blank"> Activity 6</a></li>
+    <li><a href="day10/day10.html" target="_blank"> Activity 7</a></li>
+    <li><a href="day11/day11.html" target="_blank"> Activity 8</a></li>
+
  </ul>
 </body>
 </html>
