--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <li><a href="day10/day10.html" target="_blank"> Activity 7</a></li>
     <li><a href="day11/day11.html" target="_blank"> Activity 8</a></li>
     <li><a href="day12/activity10.html" target="_blank"> Activity 10</a></li>
+    <li><a href="Project1/project1.html" target="_blank"> Project 1</a></li>
+
     
 
  </ul>
