--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
     <li><a href="day12/activity10.html" target="_blank"> Activity 10</a></li>
     <li><a href="Project1/project1.html" target="_blank"> Project 1</a></li>
     <li><a href="day13/activity11.html" target="_blank"> Activity 11</a></li>
+    <li><a href="day14/activity12.html" target="_blank"> Activity 12</a></li>
+    <li><a href="day15/activity13.html" target="_blank"> Activity 13</a></li>
+    <li><a href="day16/activity14.html" target="_blank"> Activity 14</a></li>
+    <li><a href="day16/activity15.PNG" target="_blank"> Activity 15</a></li>
+    
+
 
 
     
