--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     <li><a href="day16/activity14.html" target="_blank"> Activity 14</a></li>
     <li><a href="day16/activity15.PNG" target="_blank"> Activity 15</a></li>
     <li><a href="day17/activity16.py" target="_blank"> Activity 16</a></li>
+    <li><a href="day18/activity17.py" target="_blank"> Activity 17</a></li>
+
     
 
 
