--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <li><a href="day16/activity15.PNG" target="_blank"> Activity 15</a></li>
     <li><a href="day17/activity16.py" target="_blank"> Activity 16</a></li>
     <li><a href="day18/activity17.py" target="_blank"> Activity 17</a></li>
+    <li><a href="day19/activity18.py" target="_blank"> Activity 18</a></li>
 
     
 
