--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
     <li><a href="day17/activity16.py" target="_blank"> Activity 16</a></li>
     <li><a href="day18/activity17.py" target="_blank"> Activity 17</a></li>
     <li><a href="day19/activity18.py" target="_blank"> Activity 18</a></li>
+    <li><a href="day20/activity19.html" target="_blank"> Activity 19</a></li>
+    <li><a href="day20/sc.PNG" target="_blank"> Activity 19</a></li>
+    <li><a href="cars website/index.html" target="_blank"> Project 2</a></li>
 
     
 
