--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <li><a href="day19/activity18.py" target="_blank"> Activity 18</a></li>
     <li><a href="day20/activity19.html" target="_blank"> Activity 19</a></li>
     <li><a href="day20/sc.PNG" target="_blank"> Activity 19</a></li>
+    <li><a href="day20/sc1.PNG" target="_blank"> Activity 19</a></li>
     <li><a href="cars website/index.html" target="_blank"> Project 2</a></li>
 
     
